<resources>
    <string name="app_name">Clim</string>
    <string name="something_wrong">Algo errado ocorreu</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="register">Criar uma conta</string>
    <string name="incorrect_email">Email incorreto</string>
    <string name="compulsory_field">Campo obrigatório</string>
    <string name="incorrect_password">Senha incorreta</string>
    <string name="user_not_found">Usuário não encontrado</string>
    <string name="lastname">Sobrenome</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="do_register">Registrar</string>
    <string name="min_length_password_error">O tamanho mínimo é de 6 caracteres</string>
    <string name="different_password">Senhas diferentes</string>
    <string name="services">Serviços</string>
    <string name="clients">Clientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_clients">Map</string>
    <string name="no_fine_location_permission">Verifique as permissões de localização do app</string>
    <string name="add_client">Adicionar um cliente</string>
    <string name="client_name_hint">Nome do cliente</string>
    <string name="address">Endereço</string>
    <string name="client_phone_hint">Telefone do cliente</string>
    <string name="client_zip_code_hint">CEP</string>
    <string name="client_state_hint">Estado</string>
    <string name="client_city_hint">Cidade</string>
    <string name="client_neighborhood_hint">Bairro</string>
    <string name="client_street_hint">(Rua, Avenida)</string>
    <string name="client_secondary_address_hint">Complemento</string>
    <string name="mark_location_on_map">Marcar no mapa</string>
    <string name="cliente_info">Informações do Cliente</string>
    <string name="no_address_found">Nenhum endereço encontrado</string>
    <string name="service_not_available">Serviço não disponível</string>
    <string name="invalid_lat_long_used">Coordenadas inválidas</string>
    <string name="client_number_address_hint">Número</string>
    <string name="choose_a_country">Escolha um país</string>
    <string name="none_client_text">Você não possui nenhum cliente.\nToque aqui para adicionar</string>
    <string name="tap_to">Toque para</string>
    <string name="search">Pesquisar</string>
    <string name="add_task">Adicionar um serviço</string>
    <string name="none_task_text">Nenhum serviço agendado.\nToque para adicionar</string>
    <string name="tap_to_choose_client">Toque para escolher o cliente</string>
    <string name="title_hint">Título *</string>
    <string name="description_hint">Descrição</string>
    <string name="valor_hint">Valor *</string>
    <string name="data_hint">Data *</string>
    <string name="select_a_client">Selecione um cliente</string>
    <string name="pick_a_cliente">Escolha um cliente</string>
    <string name="new_or_from_contacts">Escolher dos contatos ou criar um novo?</string>
    <string name="contacts">Contatos</string>
    <string name="newclient">Novo</string>

    <array name="interval">
        <item>Hora(s)</item>
        <item>Dia(s)</item>
        <item>Semana(s)</item>
        <item>Mês(es)</item>
    </array>

</resources>
